Created Admin area: Products controller, create and all views Product service CreateDbContext

--- a/SvetulkaApp/Web/SvetulkaApp.Web/Areas/Administration/Views/_ViewImports.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Areas/Administration/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using SvetulkaApp.Web
 @using SvetulkaApp.Web.ViewModels
+@using SvetulkaApp.Web.Areas.Administration.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, PressCenters.Web
