--- a/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/_Layout.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/_Layout.cshtml
@@ -38,10 +38,19 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TestPage">Test Page</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Settings" asp-action="Index">Settings</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Administration" asp-controller="Products" asp-action="All">ALL</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Administration" asp-controller="Products" asp-action="Create">CREATE</a>
                         </li>
                     </ul>
                 </div>
