--- a/SvetulkaApp/Web/SvetulkaApp.Web/Areas/Administration/Views/Products/Create.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Areas/Administration/Views/Products/Create.cshtml
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="form-group text-center">
-            <button type="submit" value="" class="btn btn-primary">Създай продукт</button>
+            <button type="submit" value="" class="btn btn-primary">Create Product</button>
         </div>
     </form>
 </div>
