--- a/SvetulkaApp/Web/SvetulkaApp.Web/Areas/Administration/Views/Products/All.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Areas/Administration/Views/Products/All.cshtml
@@ -5,7 +5,7 @@
 @model IPagedList<SvetulkaApp.Data.Models.Product>
 
 @{
-    ViewData["Title"] = "Всички продукти";
+    ViewData["Title"] = "All Products";
 }
 
 <div class="container mobile-fondsize-11">
@@ -41,13 +41,10 @@
                     </td>
                     <td class="col-md-3 d-flex justify-content-around">
                         <div class="mr-2">
-                            <a asp-action="Edit" asp-route-id="@product.Id" class="btn btn-primary btn-sm mobile-fondsize-11">Edit</a>
+                            <a asp-controller="Products" asp-action="Edit" asp-route-id="@product.Id" class="btn btn-primary btn-sm mobile-fondsize-11">Edit</a>
                         </div>
                         <div class="mr-2">
-                            <a asp-area="" asp-controller="Products" asp-action="Details" asp-route-id="@product.Id" class="btn btn-danger btn-sm">Детайли</a>
-                        </div>
-                        <div>
-                            <a asp-action="Hide" asp-route-id="@product.Id" class="btn btn-outline-danger btn-sm">Скрий</a>
+                            <a asp-area="" asp-controller="Products" asp-action="Details" asp-route-id="@product.Id" class="btn btn-danger btn-sm">Details</a>
                         </div>
                     </td>
                 </tr>
