--- a/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/_Layout.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Settings" asp-action="Index">Settings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="All">Products</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Administration" asp-controller="Products" asp-action="All">ALL</a>
