favorites: all, add, remove created

--- a/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/_LoginPartial.cshtml
@@ -43,7 +43,7 @@
             <a class="nav-link" href="#"><i class="fas fa-shopping-bag fa-md"></i></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" asp-controller="Account" asp-action="Favorites"><i class="fas fa-heart fa-md"></i></a>
+            <a class="nav-link" asp-controller="Favorites" asp-action="All"><i class="fas fa-heart fa-md"></i></a>
         </li>
     }
     else
