--- a/SvetulkaApp/Web/SvetulkaApp.Web/Views/Products/All.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Views/Products/All.cshtml
@@ -27,6 +27,7 @@
                     <p class="card-btns">@product.Price bgn</p>
                     <a class="card-btns card-link" asp-route-id="@product.Id"
                        data-toggle="modal" data-target=".bd-example-modal-lg">Details</a>
+                    <a asp-controller="Favorites" asp-action="Add" asp-route-id="@product.Id" class="card-btns card-link">fav</a>
                     <a class="card-btns card-link" href="#">Order</a>
                 </div>
             </div>
