--- a/SvetulkaApp/Web/SvetulkaApp.Web/Areas/Administration/Views/Products/Create.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Areas/Administration/Views/Products/Create.cshtml
@@ -30,10 +30,11 @@
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
-                <select class="form-control" asp-for="ProductCategories" asp-items="Html.GetEnumSelectList<ProductCategory>()">
-                    @*<option selected="selected" value="">Please select</option>*@
+                <label asp-for="Category" class="control-label"></label>
+                <select class="form-control" asp-for="Category" asp-items="Html.GetEnumSelectList<ProductCategory>()">
+                    <option selected="" disabled="" value="">Please select</option>
                 </select>
-                <span asp-validation-for="ProductCategories" class="text-danger"></span>
+                <span asp-validation-for="Category" class="text-danger"></span>
             </div>
         </div>
         <div class="form-row">
