--- a/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/_LoginPartial.cshtml
@@ -8,41 +8,46 @@
 <ul class="navbar-nav">
     @if (this.SignInManager.IsSignedIn(this.User))
     {
-        <li class="nav-item">
+        <li class="dropdown">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @(this.User.Identity.Name)!</a>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" asp-controller="Orders" asp-action="MyOrders">My Orders</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Account Settings</a>
+                <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@(this.Url.Action("Index", "Home", new { area = string.Empty }))">Logout</a>
+            </div>
         </li>
         if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
         {
-            <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="Administration" asp-controller="Dashboard" asp-action="Index" title="Admin">Admin</a>
+            <li class="dropdown">
+                <a class="nav-link text-dark" asp-area="Administration" asp-controller="Home" asp-action="Index" title="Manage">Admin Panel</a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" asp-area="Administration" asp-controller="Dashboard" asp-action="Index" title="Admin">Admin</a>
+                    <a class="dropdown-item" asp-area="Administration" asp-controller="Products" asp-action="All">ALL</a>
+                    <a class="dropdown-item" asp-area="Administration" asp-controller="Products" asp-action="Create">CREATE</a>
+                </div>
             </li>
         }
-        <li class="nav-item">
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@(this.Url.Action("Index", "Home", new { area = string.Empty }))">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-            </form>
-        </li>
-
-        <li class="dropdown">
-            <button class="btn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-user fa-md"></i>
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Account Settings</a>
-                <form class="dropdown-item form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@(this.Url.Action("Index", "Home", new { area = string.Empty }))">
+        @*<li class="nav-item">
+                <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@(this.Url.Action("Index", "Home", new { area = string.Empty }))">
                     <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
                 </form>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#"><i class="fas fa-user fa-md"></i></a>
-        </li>
+            </li>*@
 
-        <li class="nav-item">
-            <a class="nav-link" href="#"><i class="fas fa-shopping-bag fa-md"></i></a>
-        </li>
+        @*<li class="dropdown">
+                <button class="btn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-user fa-md"></i>
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Account Settings</a>
+                    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@(this.Url.Action("Index", "Home", new { area = string.Empty }))">Logout</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            </li>*@
+        @*<li class="nav-item">
+                <a class="nav-link" href="#"><i class="fas fa-user fa-md"></i></a>
+            </li>*@
         <li class="nav-item">
             <a class="nav-link" asp-controller="Favorites" asp-action="All"><i class="fas fa-heart fa-md"></i></a>
         </li>
