--- a/SvetulkaApp/Web/SvetulkaApp.Web/Views/Home/Index.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Views/Home/Index.cshtml
@@ -1,30 +1,76 @@
 ﻿@{
     this.ViewData["Title"] = "Home Page";
 }
-
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img class="d-block w-100" src="https://www.sleepzone.ie/uploads/images/PanelImages800x400/TheBurren/General/sleepzone_hostels_burren_800x400_14.jpg" alt="Third slide">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="http://eidupont.scene7.com/is/image/eidupont/cargo-covers-recycling-banner-800x400" alt="Second slide">
-        </div>
+@*<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="https://www.sleepzone.ie/uploads/images/PanelImages800x400/TheBurren/General/sleepzone_hostels_burren_800x400_14.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://eidupont.scene7.com/is/image/eidupont/cargo-covers-recycling-banner-800x400" alt="Second slide">
+            </div>
             <img class="d-block w-100" src="https://anandabulgaria.com/wp-content/uploads/2013/03/landscape-5-800x400.jpg" alt="First slide">
-        <div class="carousel-item">
+            <div class="carousel-item">
+            </div>
         </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>*@
+<link rel="stylesheet" href="~/css/jumbotron.css" />
+<!-- News jumbotron -->
+<div class="jumbotron text-center hoverable p-4">
+
+    <!-- Grid row -->
+    <div class="row">
+
+        <!-- Grid column -->
+        <div class="col-md-4 offset-md-1 mx-3 my-3">
+
+            <!-- Featured image -->
+            <div class="view overlay">
+                <img src="https://mdbootstrap.com/img/Photos/Others/laptop-sm.jpg" class="img-fluid" alt="Sample image for first version of blog listing">
+                <a>
+                    <div class="mask rgba-white-slight"></div>
+                </a>
+            </div>
+
+        </div>
+        <!-- Grid column -->
+        <!-- Grid column -->
+        <div class="col-md-7 text-md-left ml-3 mt-3">
+
+            <!-- Excerpt -->
+            <a href="#" class="green-text">
+                <h6 class="h6 pb-1"><i class="fas fa-desktop pr-1"></i> Work</h6>
+            </a>
+
+            <h4 class="h4 mb-4">This is title of the news</h4>
+
+            <p class="font-weight-normal">
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque, totam
+                rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+                dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur.
+            </p>
+            <p class="font-weight-normal">by <a><strong>Carine Fox</strong></a>, 19/08/2016</p>
+
+            <a class="btn btn-success">Read more</a>
+
+        </div>
+        <!-- Grid column -->
+
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
+    <!-- Grid row -->
+
 </div>
+<!-- News jumbotron -->
