--- a/SvetulkaApp/Web/SvetulkaApp.Web/Views/Products/All.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Views/Products/All.cshtml
@@ -25,16 +25,16 @@
                 </div>
                 <div class="card-footer">
                     <p class="card-btns">@product.Price bgn</p>
-                    <a class="card-btns card-link" asp-route-id="@product.Id"
-                       data-toggle="modal" data-target=".bd-example-modal-lg">Details</a>
+                    <a id="load-partial" class="card-btns card-link" asp-controller="Products" asp-action="Details" asp-route-id="@product.Id">Details</a>
                     <a asp-controller="Favorites" asp-action="Add" asp-route-id="@product.Id" class="card-btns card-link">fav</a>
                     <a class="card-btns card-link" asp-controller="ShoppingCart" asp-action="Add" asp-route-id="@product.Id">Add to cart</a>
                 </div>
             </div>
-
-            @*<partial name="_DetailsPartial" model="product" />*@
         }
     </div>
 </div>
+
+@*data-toggle="modal" data-target=".bd-example-modal-lg"*@
+
 @*@Html.Partial("_DetailsPartial.cshtml", new DetailsProductViewModel { Price = 3, Description = "hello" })*@
-@*<partial name="_DetailsPartial" model="new DetailsProductViewModel { Price = product.Price }" />*@
+@*<partial name="_DetailsPartial" model="new DetailsProductViewModel { Price = 3 }" />*@
