--- a/SvetulkaApp/Web/SvetulkaApp.Web/Views/Products/_DetailsPartial.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Views/Products/_DetailsPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@Model DetailsProductViewModel
+﻿@*@Model DetailsProductViewModel*@
 
 <!-- Modal -->
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
@@ -14,9 +14,9 @@
                         <h4 class="card-title"></h4>
                         <h6 class="card-subtitle text-muted"></h6>
                         <div class="dropdown-divider"></div>
-                        <h6 class="card-subtitle text-muted">@Model.Id</h6>
+                        <h6 class="card-subtitle text-muted">@ViewBag.Name</h6>
                         <div class="dropdown-divider"></div>
-                        <h6 class="card-subtitle">@Model.Price bgn</h6>
+                        <h6 class="card-subtitle">@ViewBag.Price bgn</h6>
                     </div>
                     <div class="products-buttons">
                         <a class="card-btns card-link" href="#">Order</a>
