Added simple product search by name

--- a/SvetulkaApp/Web/SvetulkaApp.Web/Views/Products/All.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Views/Products/All.cshtml
@@ -3,7 +3,8 @@
 @using X.PagedList;
 @using SvetulkaApp.Web.Areas.Administration.ViewModels.Products
 
-@model IPagedList<SvetulkaApp.Data.Models.Product>
+@*@model IPagedList<SvetulkaApp.Data.Models.Product>*@
+@model IPagedList<SvetulkaApp.Web.ViewModels.Products.AllProductsViewModel>
 
 @{
     this.ViewData["Title"] = "Products";
