--- a/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/_Layout.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/_Layout.cshtml
@@ -42,8 +42,8 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="All">Products</a>
                         </li>
                         <li class="nav-item">
-                            <form>
-                                <input type="search" placeholder="Search">
+                            <form asp-controller="Products" asp-action="Search" method="get">
+                                <input name="searchQuery" type="search" placeholder="Search...">
                             </form>
                         </li>                        
                     </ul>
