--- a/SvetulkaApp/Web/SvetulkaApp.Web/Areas/Administration/Views/Products/Edit.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Areas/Administration/Views/Products/Edit.cshtml
@@ -6,32 +6,35 @@
     ViewData["Title"] = "Edit Product";
 }
 
+<link href="~/css/createAndEditProducts.css" rel="stylesheet" />
 <h3 class="mobile-fondsize-20 text-muted text-center">@ViewData["Title"]</h3>
 <hr class="w-50" />
-<div class="container">
+<div class="container" id="myForm">
     <form asp-action="Edit" method="post" enctype="multipart/form-data">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-12">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group col-md-6">
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-12">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
         </div>
         <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-12">
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
         </div>
         <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-12">
                 <label asp-for="Category" class="control-label"></label>
                 <select class="form-control" asp-for="Category" asp-items="Html.GetEnumSelectList<ProductCategory>()">
                     <option selected="" disabled="" value="">Please select</option>
@@ -40,11 +43,20 @@
             </div>
         </div>
         <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-12">
                 <div class="form-group">
                     <label asp-for="ImageUrl" class="control-label"></label>
                     <input asp-for="ImageUrl" class="form-control" multiple />
                     <span asp-validation-for="ImageUrl" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-12">
+                <div class="form-group">
+                    <label asp-for="Tags" class="control-label"></label>
+                    <input asp-for="Tags" class="form-control" multiple />
+                    <span asp-validation-for="Tags" class="text-danger"></span>
                 </div>
             </div>
         </div>
