--- a/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/Components/OrderProductsComponent/Default.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/Components/OrderProductsComponent/Default.cshtml
@@ -30,16 +30,16 @@
                         </a>
                     </td>
                     <td class="col-2 d-flex justify-content-center">
-                        @product.Price лв.
+                        $@product.Price
                     </td>
                     <td class="col-2 d-flex justify-content-around">
-                        @product.Price лв.
+                        $@product.Price
                     </td>
                 </tr>
             }
         </tbody>
     </table>
     <div class="text-right">
-        <p class="font-weight-bold text-danger h5 text-right">Обща сума за продуктите: @(Model.Sum(x => x.Price)) лв.</p>
+        <p class="font-weight-bold text-danger h5 text-right">Total Price: $@(Model.Sum(x => x.Price))</p>
     </div>
 </div>
