--- a/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/Components/ShoppingCartComponent/Default.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/Components/ShoppingCartComponent/Default.cshtml
@@ -1,14 +1,12 @@
 ﻿@model List<SvetulkaApp.Web.ViewModels.ShoppingCart.ShoppingCartViewModel>
-
+<link href="~/css/shoppingCartProceed.css" rel="stylesheet" />
 <div class="container mobile-fondsize-11 bg-white">
     <table class="table table-sm table-hover mb-0">
         <thead>
             <tr class="row">
-                <th scope="col" class="col-2 d-flex justify-content-center">Продукт</th>
-                <th scope="col" class="col-4 d-flex justify-content-center"></th>
-                <th scope="col" class="col-2 d-flex justify-content-center">Ед. цена</th>
-                <th scope="col" class="col-2 d-flex justify-content-center">Брой</th>
-                <th scope="col" class="col-2 d-flex justify-content-center">Общо</th>
+                <th scope="col" class="col-2 d-flex justify-content-center">Product</th>
+                <th scope="col" class="col-8 d-flex justify-content-center">Category</th>
+                <th scope="col" class="col-2 d-flex justify-content-center">Price</th>
             </tr>
         </thead>
         <tbody>
@@ -20,22 +18,20 @@
                             <img src="@product.ImageUrl" width="50" height="50">
                         </a>
                     </td>
-                    <td class="col-4 d-flex justify-content-center">
-                        <a asp-area="" asp-controller="Products" asp-action="Details" asp-route-id="@product.Id">
-                            @product.Name
-                        </a>
+                    <td class="col-8 d-flex justify-content-center">
+                        @product.Name
+                        @*<a asp-area="" asp-controller="Products" asp-action="Details" asp-route-id="@product.Id">
+                                @product.Name
+                            </a>*@
                     </td>
                     <td class="col-2 d-flex justify-content-center">
-                        @product.Price лв.
-                    </td>
-                    <td class="col-2 d-flex justify-content-center">
-                        @product.TotalPrice лв.
+                        $@product.Price
                     </td>
                 </tr>
             }
         </tbody>
     </table>
-    <div class="text-right">
-        <p class="font-weight-bold text-danger h5 text-right">Обща сума за продуктите: @(Model.Sum(x => x.Price))</p>
+    <div class="totalSum">
+        <p class="font-weight-bold text-danger h5 text-center">Total price: $@(Model.Sum(x => x.Price))</p>
     </div>
 </div>
