--- a/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/_Layout.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/_Layout.cshtml
@@ -14,6 +14,8 @@
     <link rel="stylesheet" type="text/css" href="~/css/form.css">
     <link rel="stylesheet" type="text/css" href="~/css/custom.css">
 
+    <link rel="icon" type="image/x-icon" href="~/favicon.ico">
+
     <environment names="Development">
         <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/site.css" rel="stylesheet" asp-append-version="true" />
