--- a/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Views/Shared/_LoginPartial.cshtml
@@ -4,6 +4,7 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
+<link href="~/css/iconColors.css" rel="stylesheet" />
 <link rel="stylesheet" href="~/css/dropdownFix.css" />
 <ul class="navbar-nav">
     @if (this.SignInManager.IsSignedIn(this.User))
@@ -23,8 +24,8 @@
                 <a class="nav-link text-dark" asp-area="Administration" asp-controller="Home" asp-action="Index" title="Manage">Admin Panel</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" asp-area="Administration" asp-controller="Dashboard" asp-action="Index" title="Admin">Admin</a>
-                    <a class="dropdown-item" asp-area="Administration" asp-controller="Products" asp-action="All">ALL</a>
-                    <a class="dropdown-item" asp-area="Administration" asp-controller="Products" asp-action="Create">CREATE</a>
+                    <a class="dropdown-item" asp-area="Administration" asp-controller="Products" asp-action="All">All Products List</a>
+                    <a class="dropdown-item" asp-area="Administration" asp-controller="Products" asp-action="Create">Add Product</a>
                 </div>
             </li>
         }
@@ -49,10 +50,10 @@
                 <a class="nav-link" href="#"><i class="fas fa-user fa-md"></i></a>
             </li>*@
         <li class="nav-item">
-            <a class="nav-link" asp-controller="Favorites" asp-action="All"><i class="fas fa-heart fa-md"></i></a>
+            <a class="nav-link" asp-controller="Favorites" asp-action="All"><i class="fas fa-heart fa-md favs"></i></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" asp-controller="ShoppingCart" asp-action="Index"><i class="fas fa-shopping-bag fa-md"></i></a>
+            <a class="nav-link" asp-controller="ShoppingCart" asp-action="Index"><i class="fas fa-shopping-bag fa-md cart"></i></a>
         </li>
     }
     else
