--- a/SvetulkaApp/Web/SvetulkaApp.Web/Views/ShoppingCart/Index.cshtml
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/Views/ShoppingCart/Index.cshtml
@@ -36,9 +36,10 @@ else
                                     </a>
                                 </td>
                                 <td class="col-4 d-flex justify-content-center">
-                                    <a asp-area="" asp-controller="Products" asp-action="Details" asp-route-id="@product.Id">
+                                    <a href="javascript:void(0);" class="anchorDetail" data-id="@product.Id">@product.Name</a>
+                                    @*<a asp-area="" asp-controller="Products" asp-action="Details" asp-route-id="@product.Id">
                                         @product.Name
-                                    </a>
+                                    </a>*@
                                 </td>
                                 <td class="col-1 d-flex justify-content-center">
                                     <a class="text-danger" asp-controller="ShoppingCart" asp-action="Delete" asp-route-id="@product.Id"><i class="fas fa-times-circle"></i></a>
@@ -55,7 +56,7 @@ else
             <div class="mobile-fondsize-20 text-center h4">Order Info:</div>
 
             <div class="mt-4">
-                <p class="font-weight-bold text-danger text-center h5 mt-3">Total: @(Model.Sum(x => x.TotalPrice)) bgn.</p>
+                <p class="font-weight-bold text-danger text-center h5 mt-3">Total: $@(Model.Sum(x => x.TotalPrice))</p>
             </div>
 
             <div class="text-right mt-3 mb-3">
@@ -65,3 +66,19 @@ else
     </div>
 }
 
+
+<div id="myModal" class="modal fade bd-example-modal-lg">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content" id="myModalContent">
+        </div>
+    </div>
+
+</div>
+
+@section scripts
+    {
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/bootstrap.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/js/modal.js"></script>
+}  
